fix chevron z-index and remove uneeded boostrap dependancy

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -91,7 +91,7 @@ $social-networks: (
 // TYPOGRAPHY
 
 $font-family-sans-serif:     "ArialLight","Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-family-serif:          "CenturySchoolbookStdRegular", Georgia, "Times New Roman", Times, serif;
+$font-family-serif:          "Century Schoolbook", "CenturySchoolbookStdRegular", Georgia, "Times New Roman", Times, serif;
 $font-family-monospace:      Menlo, Monaco, Consolas, "Courier New", monospace;
 $font-family-base:           $font-family-sans-serif;
 
